# lesson_27_hw

./: db.sqlite3  ex.py  manage.py  pyproject.toml
_data_source/: ads.json  csv_to_json.py  user.json
ads/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_price.py  0003_alter_category_id.py  0004_alter_category_id.py
lesson_27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
